UI changes added

--- a/server/views/pages/offence/review-offences.njk
+++ b/server/views/pages/offence/review-offences.njk
@@ -7,7 +7,33 @@
 {% set pageTitle = applicationName + " - Review offences" %}
 {% set hideOffences = true %}
 {% block pageContent %}
-            <h1 class="govuk-heading-l">Review offences</h1>
+            <h1 class="govuk-heading-l">Update offence outcomes</h1>
+
+            {% if courtAppearance.warrantType === 'SENTENCING' and courtAppearance.hasOverallSentenceLength === 'true' %}
+            {{ govukSummaryList({
+                rows: [
+                    {
+                        key: {
+                            text: "Overall sentence length"
+                        },
+                        value: {
+                            text: courtAppearance.overallSentenceLength | formatLengths
+                        }
+                    },
+                    {
+                        key: {
+                            text: "Sentences added"
+                        },
+                        value: {
+                            text: overallSentenceLengthComparison.custodialLength | formatLengthsWithoutPeriodOrder
+                        }
+                    }
+                ],
+                attributes: {
+                    "data-qa": "overallSentenceLengthComparison"
+                }
+            }) }}
+        {% endif %}
             
             {{ govukButton({
                 text: "Add an offence" ,
@@ -18,42 +44,49 @@
                 }
             }) }}
 
+             <h2 class="govuk-heading-m govuk-!-margin-top-8">Offences with outcomes that need updating</h2>
+
             {% for offence in unchangedOffences %}
-                {{
-                    offenceCard({
-                        offenceCode: offence.offenceCode,
-                        offenceName: offenceMap[offence.offenceCode],
-                        offenceStartDate: offence.offenceStartDate | formatDate if offence.offenceStartDate else 'Not entered',
-                        offenceEndDate: offence.offenceEndDate | formatDate,
-                        outcome: outcomeMap[offence.outcomeUuid] | outcomeValueOrLegacy(offence.legacyData),
-                        outcomeUpdated: offence.updatedOutcome,
-                        countNumber: offence.sentence.countNumber,
-                        convictionDate: offence.sentence.convictionDate | formatDate,
-                        terrorRelated: offence.terrorRelated,
-                        isSentenced: offence.sentence,
-                        periodLengths: offence.sentence.periodLengths,
-                        sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] if offence.sentence,
-                        fineAmount: offence.sentence.fineAmount,
-                        actions: {
-                            items: [
-                                {
-                                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + offence.index + "/edit-offence",
-                                    text: "Edit",
-                                    visuallyHiddenText: "edit offence"
-                                }
-                            ]
-                        },
-                        listItems: {
+    <pre>{{ offence.actions | dump }}</pre> <!-- Debugging output for listItems -->
+
+    {{
+        offenceCard({
+            offenceCode: offence.offenceCode,
+            offenceName: offenceMap[offence.offenceCode],
+            offenceStartDate: offence.offenceStartDate | formatDate if offence.offenceStartDate else 'Not entered',
+            offenceEndDate: offence.offenceEndDate | formatDate,
+            outcome: outcomeMap[offence.outcomeUuid] | outcomeValueOrLegacy(offence.legacyData),
+            outcomeUpdated: offence.updatedOutcome,
+            countNumber: offence.sentence.countNumber,
+            convictionDate: offence.sentence.convictionDate | formatDate,
+            terrorRelated: offence.terrorRelated,
+            isSentenced: offence.sentence,
+            periodLengths: offence.sentence.periodLengths,
+            sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] if offence.sentence,
+            fineAmount: offence.sentence.fineAmount,
+            actions: {
+                items: [
+                    {
+                        href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + offence.index + "/edit-offence",
+                        text: "Edit",
+                        visuallyHiddenText: "edit offence"
+                    }
+                ]
+            },
+                                    listItems: {
                             classes: "govuk-!-margin-top-4 govuk-!-margin-bottom-2",
                             items: [{
                                 html: '<a href="/person/'+ nomsId + '/' + addOrEditCourtCase + '/' + courtCaseReference  + '/' + addOrEditCourtAppearance + '/' + appearanceReference + '/offences/' + offence.index + '/update-offence-outcome">Update outcome</a>'
                             }]
                         }
-                    })
-                }}
-            {% endfor %}
+
+        })
+    }}
+{% endfor %}
             
             <h2 class="govuk-heading-m govuk-!-margin-top-8">Offences with updated outcomes</h2>
+
+            <h3 class="govuk-heading-m govuk-!-margin-top-8">Offences with custodial outcomes</h3>
 
             {% for offence in changedOffences %}
                 {{
@@ -84,7 +117,42 @@
                 }}
             {% else %}
                 {{ govukInsetText({
-                    text: "There are no offences with updated outcomes."
+                    text: "There are no offences with custodial outcomes."
+                }) }}
+            {% endfor %}
+
+            <h3 class="govuk-heading-m govuk-!-margin-top-8">Offences with non-custodial outcomes</h3>
+
+            {% for offence in changedOffences %}
+                {{
+                    offenceCard({
+                        offenceCode: offence.offenceCode,
+                        offenceName: offenceMap[offence.offenceCode],
+                        offenceStartDate: offence.offenceStartDate | formatDate if offence.offenceStartDate else 'Not entered',
+                        offenceEndDate: offence.offenceEndDate | formatDate,
+                        outcome: outcomeMap[offence.outcomeUuid] | outcomeValueOrLegacy(offence.legacyData),
+                        outcomeUpdated: offence.updatedOutcome,
+                        countNumber: offence.sentence.countNumber,
+                        convictionDate: offence.sentence.convictionDate | formatDate,
+                        terrorRelated: offence.terrorRelated,
+                        isSentenced: offence.sentence,
+                        periodLengths: offence.sentence.periodLengths,
+                        sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] if offence.sentence,
+                        fineAmount: offence.sentence.fineAmount,
+                        actions: {
+                            items: [
+                                {
+                                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + offence.index + "/edit-offence",
+                                    text: "Edit",
+                                    visuallyHiddenText: "edit offence"
+                                }
+                            ]
+                        }
+                    })
+                }}
+            {% else %}
+                {{ govukInsetText({
+                    text: "There are no offences with non-custodial outcomes."
                 }) }}
             {% endfor %}
 
