--- a/server/views/partials/prisonerBannerBackLayout.njk
+++ b/server/views/partials/prisonerBannerBackLayout.njk
@@ -1,17 +1,17 @@
 {% extends "./prisonerBannerLayout.njk" %}
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 
-{% if backLink %}
-    {% block subNavigation %}
-            <div class="govuk-grid-row" role="navigation">
+{% block subNavigation %}
+        <div class="govuk-grid-row" role="navigation">
+            {% if backLink.length %}
                 <div class="govuk-grid-column-one-half">
                     {{ govukBackLink({
                         text: "Back",
                         href: backLink,
                         attributes: {  'data-qa': 'back-link' }
                     }) }}
-                    </div>
-                <div class="govuk-grid-column-one-half govuk-!-text-align-right"><a href="/person/{{ nomsId }}" class="govuk-link govuk-body-s">Go to Court cases</a></div>
-            </div>
-    {% endblock %}
-{% endif %}
+                </div>
+            {% endif %}
+            <div class="{{'govuk-grid-column-one-half' if backLink.length else 'govuk-grid-column-full'}} govuk-!-text-align-right"><a href="/person/{{ nomsId }}" class="govuk-link govuk-body-s">Go to Court cases</a></div>
+        </div>
+{% endblock %}
