RASS-959 rename button content

--- a/server/views/pages/courtAppearance/overall-sentence-length.njk
+++ b/server/views/pages/courtAppearance/overall-sentence-length.njk
@@ -85,7 +85,7 @@
         }) }}
 
         {{ govukButton({
-            text: "Save and continue",
+            text: "Continue",
             attributes: {  'data-qa': 'continue-button' }
         }) }}
 
