--- a/server/views/pages/courtAppearance/details.njk
+++ b/server/views/pages/courtAppearance/details.njk
@@ -234,7 +234,7 @@
                     offenceName: offenceMap[offence.offenceCode],
                     offenceStartDate: offence.offenceStartDate | formatDate if offence.offenceStartDate else 'Not entered',
                     offenceEndDate: offence.offenceEndDate | formatDate,
-                    outcome: outcomeMap[offence.outcomeUuid] | outcomeValueOrLegacy(offence.legacyData),
+                    outcome: outcomeMap[offence.outcomeUuid] | chargeOutcomeOrLegacy(offence.legacyData),
                     countNumber: offence.sentence.countNumber,
                     convictionDate: offence.sentence.convictionDate | formatDate,
                     terrorRelated: offence.terrorRelated,
