--- a/server/views/pages/offence/update-offence-outcomes.njk
+++ b/server/views/pages/offence/update-offence-outcomes.njk
@@ -52,7 +52,7 @@
             offenceName: offenceMap[offence.offenceCode],
             offenceStartDate: offence.offenceStartDate | formatDate if offence.offenceStartDate else 'Not entered',
             offenceEndDate: offence.offenceEndDate | formatDate,
-            outcome: outcomeMap[offence.outcomeUuid].outcomeType | outcomeValueOrLegacy(offence.legacyData),
+            outcome: outcomeMap[offence.outcomeUuid] | chargeOutcomeOrLegacy(offence.legacyData),
             outcomeUpdated: offence.updatedOutcome,
             countNumber: offence.sentence.countNumber,
             convictionDate: offence.sentence.convictionDate | formatDate,
@@ -96,7 +96,7 @@
                         offenceName: offenceMap[offence.offenceCode],
                         offenceStartDate: offence.offenceStartDate | formatDate if offence.offenceStartDate else 'Not entered',
                         offenceEndDate: offence.offenceEndDate | formatDate,
-                        outcome: outcomeMap[offence.outcomeUuid].outcomeType | outcomeValueOrLegacy(offence.legacyData),
+                        outcome: outcomeMap[offence.outcomeUuid] | chargeOutcomeOrLegacy(offence.legacyData),
                         outcomeUpdated: offence.updatedOutcome,
                         countNumber: offence.sentence.countNumber,
                         convictionDate: offence.sentence.convictionDate | formatDate,
@@ -131,7 +131,7 @@
                         offenceName: offenceMap[offence.offenceCode],
                         offenceStartDate: offence.offenceStartDate | formatDate if offence.offenceStartDate else 'Not entered',
                         offenceEndDate: offence.offenceEndDate | formatDate,
-                        outcome: outcomeMap[offence.outcomeUuid].outcomeType | outcomeValueOrLegacy(offence.legacyData),
+                        outcome: outcomeMap[offence.outcomeUuid] | chargeOutcomeOrLegacy(offence.legacyData),
                         outcomeUpdated: offence.updatedOutcome,
                         countNumber: offence.sentence.countNumber,
                         convictionDate: offence.sentence.convictionDate | formatDate,
@@ -160,7 +160,7 @@
     <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-update-offence-outcomes">
         <input type="hidden" name="_csrf" value="{{ csrfToken }}">
         {{ govukRadios({
-                        name: "finishedReviewOffences",
+                        name: "finishedReviewOffenceOutcomes",
                         fieldset: {
                             legend: {
                             text: "Have you finished reviewing offences?",
@@ -168,7 +168,7 @@
                             classes: "govuk-fieldset__legend--m"
                             }
                         },
-                        errorMessage: errors | findError("finishedReviewOffences"),
+                        errorMessage: errors | findError("finishedReviewOffenceOutcomes"),
                         items: [
                             {
                                 value: "true",
